# bitcoin-fun

./: CMakeLists.txt  README.md  build.sh  setup.sh
scripts/: init.sh  install.sh  setup.sh
src/: Common.h  Fun.cc  Fun.h
src/fun/: main.cc
